--- a/requirements.txt
+++ b/requirements.txt
@@ -26,8 +26,11 @@ uvicorn>=0.27.0
 timm>=0.9.12
 tiktoken>=0.5.2
 
-# for langchain demo
-
-langchain>=0.1.5
-langchainhub>=0.1.14
-arxiv>=2.1.0
+jieba>=0.42.1
+ruamel_yaml>=0.18.5
+rouge_chinese>=1.0.3
+jupyter>=1.0.0
+datasets>=2.16.1
+peft==0.7.1
+transformers>=4.37.2
+deepspeed>=0.13.1
